# torch

./: DESCRIPTION  pkgdown.yml  search.json
.github/actions/install-rocm/: action.yml  cudnn-url.txt
.github/workflows/: lantern.yaml
R/: install.R  translate.R
articles/: indexing.html  loading-data.html  tensor-creation.html  torchscript.html  using-autograd.html
articles/examples/: basic-nn-module.html
dev/: pkgdown.yml  search.json
dev/articles/: distributions.html  indexing.html  loading-data.html  tensor-creation.html  torchscript.html  using-autograd.html
dev/articles/examples/: basic-nn-module.html
dev/reference/: autograd_grad.html  distr_categorical.html  distr_gamma.html  distr_multivariate_normal.html  distr_normal.html  distr_poisson.html  jit_compile.html  linalg_cholesky_ex.html  linalg_det.html  linalg_eigh.html  linalg_eigvalsh.html  linalg_inv.html  linalg_pinv.html  linalg_slogdet.html  linalg_svd.html  linalg_svdvals.html  nn_avg_pool1d.html  nn_embedding.html  nn_flatten.html  nn_init_kaiming_normal_.html  nn_init_kaiming_uniform_.html  nn_init_normal_.html  nn_init_orthogonal_.html  nn_init_trunc_normal_.html  nn_init_uniform_.html  nn_init_xavier_normal_.html  nn_init_xavier_uniform_.html  nn_max_unpool2d.html  nn_relu.html  nn_rnn.html  nn_rrelu.html  slc.html  torch_acos.html  torch_acosh.html  torch_add.html  torch_addbmm.html  torch_addcdiv.html  torch_addcmul.html  torch_addmm.html  torch_addmv.html  (+101 more)
lantern/: CMakeLists.txt
lantern/include/lantern/: types.h
man/: autograd_backward.Rd  autograd_function.Rd  autograd_grad.Rd  call_torch_function.Rd  distr_categorical.Rd  distr_chi2.Rd  distr_mixture_same_family.Rd  distr_multivariate_normal.Rd  distr_normal.Rd  install_torch_from_file.Rd  jit_compile.Rd  jit_save.Rd  jit_save_for_mobile.Rd  jit_trace.Rd  jit_trace_module.Rd  linalg_cholesky.Rd  linalg_cholesky_ex.Rd  linalg_cond.Rd  linalg_det.Rd  linalg_eig.Rd  linalg_eigh.Rd  linalg_eigvals.Rd  linalg_eigvalsh.Rd  linalg_householder_product.Rd  linalg_inv.Rd  linalg_inv_ex.Rd  linalg_lstsq.Rd  linalg_matrix_norm.Rd  linalg_matrix_power.Rd  linalg_matrix_rank.Rd  linalg_multi_dot.Rd  linalg_norm.Rd  linalg_pinv.Rd  linalg_qr.Rd  linalg_slogdet.Rd  linalg_solve.Rd  linalg_svd.Rd  linalg_svdvals.Rd  linalg_tensorinv.Rd  linalg_tensorsolve.Rd  (+170 more)
reference/: autograd_grad.html  distr_categorical.html  distr_gamma.html  distr_multivariate_normal.html  distr_normal.html  distr_poisson.html  jit_compile.html  linalg_cholesky_ex.html  linalg_det.html  linalg_eigh.html  linalg_eigvalsh.html  linalg_inv.html  linalg_pinv.html  linalg_slogdet.html  linalg_svd.html  linalg_svdvals.html  nn_avg_pool1d.html  nn_embedding.html  nn_flatten.html  nn_init_kaiming_normal_.html  nn_init_kaiming_uniform_.html  nn_init_normal_.html  nn_init_orthogonal_.html  nn_init_trunc_normal_.html  nn_init_uniform_.html  nn_init_xavier_normal_.html  nn_init_xavier_uniform_.html  nn_max_unpool2d.html  nn_relu.html  nn_rnn.html  nn_rrelu.html  slc.html  torch_acos.html  torch_acosh.html  torch_add.html  torch_addbmm.html  torch_addcdiv.html  torch_addcmul.html  torch_addmm.html  torch_addmv.html  (+100 more)
src/: codegen.cpp  indexing.cpp  scalar.cpp  tensor.cpp  torch_api.cpp  trace.cpp  utils.cpp  xptr.cpp
